# origin

CMakeKP/: CMakeLists.txt  airTransport.cpp  airTransport.h  erthTransport.cpp  erthTransport.h  races.cpp  races.h  transport.cpp  transport.h  types.h  vasmakkp.cpp
Projects/: CMakeLists.txt  CMakeProject1.cpp
Projects/CMakeProject1/: CMakeProject1.cpp
vasmak100/: shape.h  transform.h  vasmak100.cpp  vasmak100.sln  vasmak100.vcxproj  vasmak100.vcxproj.filters
vasmak44/: vasmak44.cpp  vasmak44.sln  vasmak44.vcxproj  vasmak44.vcxproj.filters
vasmak45/: vasmak45.cpp  vasmak45.sln  vasmak45.vcxproj  vasmak45.vcxproj.filters
vasmak46/: vasmak46.cpp  vasmak46.sln  vasmak46.vcxproj  vasmak46.vcxproj.filters
vasmak47/: vasmak47.cpp  vasmak47.sln  vasmak47.vcxproj  vasmak47.vcxproj.filters
vasmak48/: vasmak48.cpp  vasmak48.sln  vasmak48.vcxproj  vasmak48.vcxproj.filters
vasmak49/: vasmak49.cpp  vasmak49.sln  vasmak49.vcxproj  vasmak49.vcxproj.filters
vasmak50/: vasmak50.cpp  vasmak50.sln  vasmak50.vcxproj  vasmak50.vcxproj.filters
vasmak51/: vasmak51.cpp  vasmak51.sln  vasmak51.vcxproj  vasmak51.vcxproj.filters
vasmak52/: vasmak52.cpp  vasmak52.sln  vasmak52.vcxproj  vasmak52.vcxproj.filters
vasmak53/: vasmak53.cpp  vasmak53.sln  vasmak53.vcxproj  vasmak53.vcxproj.filters
vasmak54/: vasmak54.cpp  vasmak54.sln  vasmak54.vcxproj  vasmak54.vcxproj.filters
vasmak55/: vasmak55.cpp  vasmak55.sln  vasmak55.vcxproj  vasmak55.vcxproj.filters
vasmak56/: vasmak56.cpp  vasmak56.sln  vasmak56.vcxproj  vasmak56.vcxproj.filters
vasmak58/: Код программы SQL.txt
(+102 files in other folders)
